--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -71,10 +71,9 @@ endif()
 
 # Extra Release flags
 set(RELEASE_CXX_OPTS
-  -O3 -Ofast -march=native -funroll-loops
-  -fstrict-aliasing -ffp-contract=off -fno-unsafe-math-optimizations
+  -O3 -march=native -funroll-loops
+  -fstrict-aliasing -fno-unsafe-math-optimizations
 )
-
 # Fast linker when using GNU/Clang
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     set(LINKER_FAST "-fuse-ld=gold")
@@ -168,6 +167,209 @@ target_link_libraries(opendxa PRIVATE
     spdlog::spdlog
     OpenMP::OpenMP_CXX
 )
+
+# Node.js bindings
+message(STATUS "Building Node.js binding...")
+
+# Find Node.js installation
+find_program(NODE_EXECUTABLE node)
+if(NOT NODE_EXECUTABLE)
+    message(FATAL_ERROR "Node.js not found. Please install Node.js.")
+endif()
+
+# Get Node.js version and paths with better detection
+execute_process(
+    COMMAND ${NODE_EXECUTABLE} -e "console.log(process.version)"
+    OUTPUT_VARIABLE NODE_VERSION
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+execute_process(
+    COMMAND ${NODE_EXECUTABLE} -e "console.log(process.config.variables.node_module_version)"
+    OUTPUT_VARIABLE NODE_MODULE_VERSION
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Better Node.js prefix detection
+execute_process(
+    COMMAND ${NODE_EXECUTABLE} -e "
+        const path = require('path');
+        const prefix = process.config.variables.node_prefix || 
+                        process.env.NODE_PREFIX || 
+                        path.dirname(path.dirname(process.execPath));
+        console.log(prefix);
+    "
+    OUTPUT_VARIABLE NODE_PREFIX
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Alternative method for Node.js include directory detection
+execute_process(
+    COMMAND ${NODE_EXECUTABLE} -e "
+        const path = require('path');
+        // Try multiple possible locations
+        const possiblePaths = [
+            path.join(process.config.variables.node_prefix || '', 'include', 'node'),
+            path.join(path.dirname(path.dirname(process.execPath)), 'include', 'node'),
+            '/usr/include/node',
+            '/usr/local/include/node',
+            '/opt/node/include/node'
+        ];
+        const fs = require('fs');
+        for (const p of possiblePaths) {
+            if (fs.existsSync(path.join(p, 'node.h'))) {
+                console.log(p);
+                process.exit(0);
+            }
+        }
+        console.log('NOT_FOUND');
+    "
+    OUTPUT_VARIABLE NODE_INCLUDE_DIR
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Try to find node-addon-api in current directory or parent directories
+execute_process(
+    COMMAND ${NODE_EXECUTABLE} -e "
+        const path = require('path');
+        const fs = require('fs');
+        let currentDir = process.cwd();
+        
+        // Check current directory first
+        try {
+            const napiPath = path.join(currentDir, 'node_modules', 'node-addon-api');
+            if (fs.existsSync(napiPath)) {
+                console.log(napiPath);
+                process.exit(0);
+            }
+        } catch(e) {}
+        
+        // Check parent directories
+        const bindings_dir = path.join(__dirname, '..', 'bindings', 'nodejs');
+        try {
+            const napiPath = path.join(bindings_dir, 'node_modules', 'node-addon-api');
+            if (fs.existsSync(napiPath)) {
+                console.log(napiPath);
+                process.exit(0);
+            }
+        } catch(e) {}
+        
+        // Try to require it
+        try {
+            const napi = require('node-addon-api');
+            console.log(napi.include_dir || napi.include || 'node_modules/node-addon-api');
+        } catch(e) {
+            console.log('NOT_FOUND');
+        }
+    "
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE NODE_ADDON_API_DIR
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+    RESULT_VARIABLE NODE_ADDON_API_RESULT
+)
+
+message(STATUS "Node.js version: ${NODE_VERSION}")
+message(STATUS "Node.js module version: ${NODE_MODULE_VERSION}")
+message(STATUS "Node.js prefix: ${NODE_PREFIX}")
+message(STATUS "Node.js include dir detected: ${NODE_INCLUDE_DIR}")
+
+# Validate Node.js headers
+if(NODE_INCLUDE_DIR STREQUAL "NOT_FOUND" OR NOT EXISTS "${NODE_INCLUDE_DIR}/node.h")
+    message(STATUS "Attempting to install Node.js development headers...")
+    
+    # Try common package managers
+    find_program(APT_GET_EXECUTABLE apt-get)
+    find_program(YUM_EXECUTABLE yum)
+    find_program(PACMAN_EXECUTABLE pacman)
+    
+    if(APT_GET_EXECUTABLE)
+        message(STATUS "Try: sudo apt-get install nodejs-dev")
+    elseif(YUM_EXECUTABLE)
+        message(STATUS "Try: sudo yum install nodejs-devel")  
+    elseif(PACMAN_EXECUTABLE)
+        message(STATUS "Try: sudo pacman -S nodejs-lts-hydrogen")
+    endif()
+    
+    message(FATAL_ERROR "
+Node.js headers not found. Tried: ${NODE_INCLUDE_DIR}
+
+Install Node.js development headers:
+Ubuntu/Debian: sudo apt-get install nodejs-dev
+CentOS/RHEL:   sudo yum install nodejs-devel  
+Arch Linux:    sudo pacman -S nodejs
+
+Or install Node.js from NodeSource/official website.
+")
+endif()
+
+if(NODE_ADDON_API_DIR STREQUAL "NOT_FOUND")
+    message(FATAL_ERROR "
+node-addon-api not found. 
+
+Install it with:
+cd ${CMAKE_SOURCE_DIR}/../bindings/nodejs
+npm install node-addon-api
+
+Or globally:
+npm install -g node-addon-api
+")
+else()
+    message(STATUS "Found node-addon-api at: ${NODE_ADDON_API_DIR}")
+endif()
+
+# Node.js addon
+set(NODEJS_SOURCES
+    ${CMAKE_SOURCE_DIR}/../bindings/nodejs/src/addon.cpp
+)
+
+if(NOT EXISTS "${CMAKE_SOURCE_DIR}/../bindings/nodejs/src/addon.cpp")
+    message(FATAL_ERROR "Node.js binding source not found at ${CMAKE_SOURCE_DIR}/../bindings/nodejs/src/addon.cpp")
+endif()
+
+add_library(opendxa_node SHARED ${NODEJS_SOURCES})
+
+# Set Node.js addon properties
+set_target_properties(opendxa_node PROPERTIES
+    PREFIX ""
+    SUFFIX ".node"
+    POSITION_INDEPENDENT_CODE ON
+    CXX_STANDARD 26
+    LINK_FLAGS_RELEASE "${LINKER_FAST}"
+)
+
+# Apply same compilation flags as main library
+target_compile_options(opendxa_node PRIVATE
+    $<$<CONFIG:Release>:${RELEASE_CXX_OPTS}>
+    -fexceptions
+    -frtti
+)
+
+target_compile_definitions(opendxa_node PRIVATE
+    NAPI_CPP_EXCEPTIONS
+    $<$<CONFIG:Release>:NDEBUG>
+)
+
+target_include_directories(opendxa_node PRIVATE
+    ${NODE_INCLUDE_DIR}
+    ${NODE_ADDON_API_DIR}
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/dependencies/geogram
+    ${EIGEN3_INCLUDE_DIR}
+    ${CMAKE_SOURCE_DIR}/dependencies/ptm
+    ${CMAKE_SOURCE_DIR}/dependencies/boost
+)
+
+target_link_libraries(opendxa_node PRIVATE
+    opendxa_lib
+    ${CMAKE_DL_LIBS}
+)
+
+# Install Node.js addon
+install(TARGETS opendxa_node 
+    LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/../bindings/nodejs/build/Release/
+)
+
+message(STATUS "Node.js binding configured successfully")
 
 # Python extension (pybind11)
 pybind11_add_module(opendxa._core
