--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,16 @@
 # NODE_ENV: Defines the server execution environment. 
 NODE_ENV=development
 
+TRAJECTORY_DIR = 'storage/trajectories'
+ANALYSIS_DIR = 'storage/analysis'
+UPLOAD_DIR = 'storage/uploads'
+
+# 5GB
+MAX_FILE_SIZE_MB = 5000
+
+# 200 files max
+MAX_FILES = 200
+
 # SECRET_KEY: Secret key used for encrypting 
 # sensitive data. It's crucial for ensuring application security.
 SECRET_KEY=
@@ -25,10 +35,8 @@ SERVER_HOSTNAME=0.0.0.0
 # of JWT tokens issued for user authentication.
 JWT_EXPIRATION_DAYS=7
 
-# CORS_ORIGIN: Defines allowed origins for 
-# cross-origin resource sharing (CORS) requests. In 
-# this case, it allows from any origin.
-CORS_ORIGIN=*
+CLIENT_HOST=http://192.168.1.85:5173
+CLIENT_DEV_HOST=http://192.168.1.85:5173
 
 # LOG_LEVEL: debug | error | info | warn
 LOG_LEVEL=info
@@ -43,7 +51,7 @@ DEVELOPMENT_DATABASE=opendxa@development
 
 # MONGO_URI: MongoDB connection URI 
 # used by the application.
-MONGO_URI=mongodb://user:pass@address:port
+MONGO_URI=
 
 # MONGO_AUTH_SOURCE: Specifies the database to authenticate against.
 # Use this if your authentication credentials are stored in a different database
