feat: connection to redis via "ioredis" from the backend.

--- a/server/.env.example
+++ b/server/.env.example
@@ -11,9 +11,16 @@ MAX_FILE_SIZE_MB = 5000
 # 200 files max
 MAX_FILES = 200
 
-# SECRET_KEY: Secret key used for encrypting 
-# sensitive data. It's crucial for ensuring application security.
-SECRET_KEY=
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# Queue Configuration
+ANALYSIS_QUEUE_NAME=trajectory_analysis
+MAX_CONCURRENT_ANALYSES=2
+ANALYSIS_TIMEOUT_MS=1800000
 
 # ENCRYPTION_KEY: Must be 64 characters.
 # https://www.browserling.com/tools/random-hex
