--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "npx tsx server.ts"
+  },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
     "@types/compression": "^1.8.1",
@@ -17,6 +20,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
