--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
+    "@types/bull": "^3.15.9",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -15,6 +16,7 @@
   "dependencies": {
     "@mongodb-js/zstd": "^2.0.1",
     "body-parser": "^2.2.0",
+    "bull": "^4.16.5",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
