feat: @server/models/user

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,7 +16,8 @@
           "@controllers/*": ["./controllers/*"],
           "@cli/*": ["./cli/*"],
           "@data/*": ["./data/*"],
-          "@services/*": ["./services/*"]
+          "@services/*": ["./services/*"],
+          "@types/*": ["./types/*"]
       }
   },
   "include": ["."],
