--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,14 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
+    "@types/validator": "^13.15.2",
     "i": "^0.3.7",
     "npm": "^11.4.2",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@mongodb-js/zstd": "^2.0.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "bull": "^4.16.5",
     "compression": "^1.8.0",
@@ -26,6 +28,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "validator": "^13.15.15"
   }
 }
