feat: trajectory model and refactoring controller logic into controllers, split into smaller parts and middleware

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -17,6 +17,7 @@
           "@cli/*": ["./cli/*"],
           "@data/*": ["./data/*"],
           "@services/*": ["./services/*"],
+          "@middlewares/*": ["./middlewares/*"],
           "@types/*": ["./types/*"]
       }
   },
