--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
+    "@types/socket.io": "^3.0.1",
     "@types/validator": "^13.15.2",
     "i": "^0.3.7",
     "npm": "^11.4.2",
@@ -28,6 +29,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   }
