--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
     "react-xtermjs": "^1.0.10",
+    "socket.io-client": "^4.8.1",
     "three": "^0.157.0",
     "vite-plugin-monaco-editor": "^1.1.0",
     "xterm": "^5.3.0",
