--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "socket.io": "^4.8.1",
