--- a/client/package.json
+++ b/client/package.json
@@ -40,7 +40,8 @@
     "vite-plugin-monaco-editor": "^1.1.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
-    "zstd-codec": "^0.1.5"
+    "zstd-codec": "^0.1.5",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
