--- a/server/.env.example
+++ b/server/.env.example
@@ -21,13 +21,8 @@ REDIS_DB=0
 ANALYSIS_QUEUE_NAME=trajectory_analysis
 MAX_CONCURRENT_ANALYSES=2
 
-# ENCRYPTION_KEY: Must be 64 characters.
-# https://www.browserling.com/tools/random-hex
-ENCRYPTION_KEY=
-
-# ENCRYPTION_KEY: Must be 32 characters.
-# https://www.browserling.com/tools/random-hex
-ENCRYPTION_IV=
+# SECRET_KEY:
+SECRET_KEY=
 
 # SERVER_PORT: The port on which the server 
 # is listening for incoming requests.
