--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "socket.io": "^4.8.1",
+    "stream-json": "^1.9.1",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   }
