feat: Allow mesh to be smoothed again given a GLTF and slice option in the Timestep Viewer

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "bull": "^4.16.5",
+    "bullmq": "^5.56.5",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
