--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.17.2",
+    "@babylonjs/loaders": "^8.17.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@formkit/auto-animate": "^0.8.2",
@@ -29,10 +31,14 @@
     "clarinet": "^0.12.6",
     "fflate": "^0.8.2",
     "json-stream-parser": "^1.3.0",
+    "leva": "^0.10.0",
     "monaco-editor": "^0.52.2",
     "postprocessing": "^6.37.3",
+    "r3f-perf": "^7.2.3",
     "react": "^18.2.0",
+    "react-babylonjs": "^3.2.5-beta.2",
     "react-beautiful-dnd": "^13.1.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
@@ -40,7 +46,7 @@
     "react-router-dom": "^7.7.0",
     "react-xtermjs": "^1.0.10",
     "socket.io-client": "^4.8.1",
-    "three": "^0.157.0",
+    "three": "^0.164.1",
     "vite-plugin-monaco-editor": "^1.1.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
@@ -59,6 +65,7 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-top-level-await": "^1.6.0"
   }
 }
