--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-xtermjs": "^1.0.10",
     "socket.io-client": "^4.8.1",
     "three": "^0.164.1",
+    "three-mesh-bvh": "^0.1.1",
     "vite-plugin-monaco-editor": "^1.1.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
