--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "socket.io": "^4.8.1",
     "stream-chain": "^3.4.0",
     "stream-json": "^1.9.1",
+    "three-mesh-bvh": "^0.1.1",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   }
