--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "socket.io-client": "^4.8.1",
     "three": "^0.164.1",
     "three-mesh-bvh": "^0.1.1",
+    "uuid": "^11.1.0",
     "vite-plugin-monaco-editor": "^1.1.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
