--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/socket.io": "^3.0.1",
+    "@types/stream-json": "^1.7.8",
     "@types/validator": "^13.15.2",
     "i": "^0.3.7",
     "npm": "^11.4.2",
@@ -36,6 +37,7 @@
     "stream-chain": "^3.4.0",
     "stream-json": "^1.9.1",
     "three-mesh-bvh": "^0.1.1",
+    "tsconfig-paths": "^4.2.0",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   }
