--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "@foxglove/wasm-zstd": "^1.0.1",
     "@hpcc-js/wasm-zstd": "^1.3.2",
     "@monaco-editor/react": "^4.7.0",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-date-pickers": "^8.9.0",
     "@oneidentity/zstd-js": "^1.0.3",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
@@ -29,6 +31,7 @@
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.9.0",
     "clarinet": "^0.12.6",
+    "date-fns": "^4.1.0",
     "fflate": "^0.8.2",
     "json-stream-parser": "^1.3.0",
     "leva": "^0.10.0",
@@ -38,6 +41,7 @@
     "react": "^18.2.0",
     "react-babylonjs": "^3.2.5-beta.2",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar-heatmap": "^1.10.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
