--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "meshoptimizer": "^0.24.0",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "pm2": "^6.0.8",
