--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
+    "react-useanimations": "^2.10.0",
     "react-xtermjs": "^1.0.10",
     "socket.io-client": "^4.8.1",
     "three": "^0.164.1",
