--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/socket.io": "^3.0.1",
     "@types/stream-json": "^1.7.8",
