--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "clarinet": "^0.12.6",
     "date-fns": "^4.1.0",
     "fflate": "^0.8.2",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "json-stream-parser": "^1.3.0",
     "leva": "^0.10.0",
