--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "pm2": "^6.0.8",
+    "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "stream-chain": "^3.4.0",
     "stream-json": "^1.9.1",
