feat: mockup to display analytics on the dashboard

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.10.0",
     "@mui/x-date-pickers": "^8.9.0",
     "@oneidentity/zstd-js": "^1.0.3",
     "@react-three/drei": "^9.122.0",
