--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,8 @@
     "axios": "^1.9.0",
     "clarinet": "^0.12.6",
     "date-fns": "^4.1.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "fflate": "^0.8.2",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
