--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -111,6 +111,7 @@ set(LIBRARY_SOURCES
     src/analysis/nearest_neighbor_finder.cpp
     src/analysis/crystal_path_finder.cpp
     src/analysis/burgers_loop_builder.cpp
+    src/analysis/analysis_context.cpp
     src/analysis/polyhedral_template_matching.cpp
     src/analysis/elastic_mapping.cpp
     src/analysis/structure_analysis.cpp
