refactor(clusters): logic related to the connection and construction of clusters isolated from the StructureAnalysis class

--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -110,6 +110,7 @@ set(LIBRARY_SOURCES
     src/analysis/delaunay_tessellation_spatial_query.cpp
     src/analysis/nearest_neighbor_finder.cpp
     src/analysis/crystal_path_finder.cpp
+    src/analysis/cluster_connector.cpp
     src/analysis/burgers_loop_builder.cpp
     src/analysis/analysis_context.cpp
     src/analysis/polyhedral_template_matching.cpp
