--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "export NODE_OPTIONS='--max-old-space-size=8192' && npx tsx --expose-gc server.ts"
+    "start": "export NODE_OPTIONS='--max-old-space-size=8192' && npx tsx server.ts"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
