--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@types/bull": "^3.15.9",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
+    "@types/draco3dgltf": "^1.4.3",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
@@ -18,6 +19,9 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "@gltf-transform/core": "^4.2.1",
+    "@gltf-transform/extensions": "^4.2.1",
+    "@gltf-transform/functions": "^4.2.1",
     "@mongodb-js/zstd": "^2.0.1",
     "@msgpack/msgpack": "^3.1.2",
     "bcryptjs": "^3.0.2",
@@ -27,6 +31,7 @@
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "draco3dgltf": "^1.5.7",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
