feat(LDX1): Lammps Delta eXchange compression algorithm

--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "@types/validator": "^13.15.2",
     "i": "^0.3.7",
     "npm": "^11.4.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.1",
@@ -28,26 +29,41 @@
     "body-parser": "^2.2.0",
     "bull": "^4.16.5",
     "bullmq": "^5.56.5",
+    "canvas": "^3.2.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "draco3dgltf": "^1.5.7",
     "express": "^5.1.0",
+    "gl": "^8.1.6",
+    "gl-matrix": "^3.4.4",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "meshoptimizer": "^0.24.0",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "pm2": "^6.0.8",
+    "pngjs": "^7.0.0",
+    "puppeteer": "^24.17.0",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "stream-chain": "^3.4.0",
     "stream-json": "^1.9.1",
+    "three": "^0.179.1",
     "three-mesh-bvh": "^0.1.1",
     "tsconfig-paths": "^4.2.0",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
