--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@gltf-transform/functions": "^4.2.1",
     "@mongodb-js/zstd": "^2.0.1",
     "@msgpack/msgpack": "^3.1.2",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@tensorflow/tfjs-node-gpu": "^4.22.0",
     "adm-zip": "^0.5.16",
@@ -52,6 +53,7 @@
     "pm2": "^6.0.8",
     "pngjs": "^7.0.0",
     "puppeteer": "^24.17.0",
+    "redis": "^5.8.2",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "stream-chain": "^3.4.0",
