--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "start": "export NODE_OPTIONS='--max-old-space-size=8192' && npx tsx server.ts"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/body-parser": "^1.19.6",
     "@types/bull": "^3.15.9",
     "@types/compression": "^1.8.1",
