--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@types/draco3dgltf": "^1.4.3",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
     "@types/socket.io": "^3.0.1",
     "@types/stream-json": "^1.7.8",
@@ -49,6 +50,7 @@
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "meshoptimizer": "^0.24.0",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "onnxruntime-node": "^1.22.0-rev",
