--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "clarinet": "^0.12.6",
     "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
@@ -47,6 +48,7 @@
     "react-babylonjs": "^3.2.5-beta.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar-heatmap": "^1.10.0",
+    "react-chartjs-2": "^5.3.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
