--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,11 @@
 {
   "scripts": {
-    "start": "export NODE_OPTIONS='--max-old-space-size=8192' && npx tsx server.ts"
+    "start": "export NODE_OPTIONS='--max-old-space-size=8192' && npx tsx server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start:pm2:ts": "pm2 start ecosystem.config.js --env production",
+    "reload:pm2": "pm2 reload api",
+    "stop:pm2": "pm2 stop api",
+    "delete:pm2": "pm2 delete api"
   },
   "devDependencies": {
     "@types/archiver": "^6.0.3",
