--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "echarts-for-react": "^3.0.2",
     "fflate": "^0.8.2",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "json-stream-parser": "^1.3.0",
     "leva": "^0.10.0",
