feat(performance-settings): add PerformanceSettingsControls component and related store for managing performance settings

--- a/tools/.clocignore
+++ b/tools/.clocignore
@@ -1,4 +1,4 @@
-// cloc --exclude-list=./tools/clocignore .
+// cloc --exclude-list=./tools/.clocignore .
 ./client/node_modules/
 ./client/package-lock.json
 
