feat: refactor environment variables and remove unused chat utilities

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,11 +2,9 @@
 NODE_ENV=development
 
 TRAJECTORY_DIR = 'storage/trajectories'
-ANALYSIS_DIR = 'storage/analysis'
 UPLOAD_DIR = 'storage/uploads'
 
-# 5GB
-MAX_FILE_SIZE_MB = 5000
+CLUSTER_ID=main-cluster
 
 # 200 files max
 MAX_FILES = 200
