--- a/server/.env.example
+++ b/server/.env.example
@@ -9,6 +9,12 @@ CLUSTER_ID=main-cluster
 # 200 files max
 MAX_FILES = 200
 
+# CPU_INTENSIVE_TASKS: Controls whether CPU-intensive operations are allowed.
+# Set to 'false' to disable DXA analysis, structure identification, PTM, CNA, and rendering operations.
+# This is useful for resource-constrained servers or to prevent overload during peak usage.
+# Default: true (enabled)
+CPU_INTENSIVE_TASKS=true
+
 # Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
