--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "html2canvas": "^1.4.1",
     "json-stream-parser": "^1.3.0",
     "leva": "^0.10.0",
+    "lucide-react": "^0.553.0",
     "monaco-editor": "^0.52.2",
     "postprocessing": "^6.37.3",
     "r3f-perf": "^7.2.3",
@@ -58,6 +59,7 @@
     "react-router-dom": "^7.7.0",
     "react-useanimations": "^2.10.0",
     "react-xtermjs": "^1.0.10",
+    "recharts": "^3.4.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.164.1",
     "three-mesh-bvh": "^0.1.1",
