--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,14 @@
     "@types/cors": "^2.8.19",
     "@types/draco3dgltf": "^1.4.3",
     "@types/express": "^5.0.3",
+    "@types/gl": "^6.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
     "@types/socket.io": "^3.0.1",
     "@types/stream-json": "^1.7.8",
+    "@types/three": "^0.181.0",
     "@types/validator": "^13.15.2",
-    "i": "^0.3.7",
-    "npm": "^11.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
@@ -29,11 +29,8 @@
     "@gltf-transform/core": "^4.2.1",
     "@gltf-transform/extensions": "^4.2.1",
     "@gltf-transform/functions": "^4.2.1",
-    "@mongodb-js/zstd": "^2.0.1",
     "@msgpack/msgpack": "^3.1.2",
     "@socket.io/redis-adapter": "^8.3.0",
-    "@tensorflow/tfjs-node": "^4.22.0",
-    "@tensorflow/tfjs-node-gpu": "^4.22.0",
     "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -41,33 +38,23 @@
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
-    "draco3dgltf": "^1.5.7",
     "express": "^5.1.0",
     "gl": "^8.1.6",
     "gl-matrix": "^3.4.4",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
-    "joi": "^17.13.3",
-    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "meshoptimizer": "^0.24.0",
     "mime-types": "^3.0.1",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "pm2": "^6.0.8",
-    "pngjs": "^7.0.0",
-    "puppeteer": "^24.17.0",
-    "redis": "^5.8.2",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
-    "stream-chain": "^3.4.0",
-    "stream-json": "^1.9.1",
-    "three": "^0.179.1",
-    "three-mesh-bvh": "^0.1.1",
+    "three": "^0.181.1",
     "tsconfig-paths": "^4.2.0",
     "uuid": "^11.1.0",
-    "validator": "^13.15.15",
-    "workerpool": "^9.3.4"
+    "validator": "^13.15.15"
   },
   "name": "server",
   "version": "1.0.0",
