feat(cutoff-neighbor-finder): implement CutoffNeighborFinder class for neighbor list management

--- a/opendxa/CMakeLists.txt
+++ b/opendxa/CMakeLists.txt
@@ -114,6 +114,7 @@ set(LIBRARY_SOURCES
     src/analysis/cluster_connector.cpp
     src/analysis/burgers_loop_builder.cpp
     src/analysis/analysis_context.cpp
+    src/analysis/cutoff_neighbor_finder.cpp
     src/analysis/polyhedral_template_matching.cpp
     src/analysis/elastic_mapping.cpp
     src/analysis/structure_analysis.cpp
