feat(minio): add MinIO client initialization and configuration for storage management

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,6 +9,12 @@ CLUSTER_ID=main-cluster
 # 200 files max
 MAX_FILES = 200
 
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
+
 # CPU_INTENSIVE_TASKS: Controls whether CPU-intensive operations are allowed.
 # Set to 'false' to disable DXA analysis, structure identification, PTM, CNA, and rendering operations.
 # This is useful for resource-constrained servers or to prevent overload during peak usage.
