--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
 # NODE_ENV: Defines the server execution environment. 
 NODE_ENV=development
 
-TRAJECTORY_DIR = 'storage/trajectories'
-UPLOAD_DIR = 'storage/uploads'
+TRAJECTORY_DIR = storage/trajectories
+UPLOAD_DIR = storage/uploads
 
 CLUSTER_ID=main-cluster
 
