--- a/server/package.json
+++ b/server/package.json
@@ -55,7 +55,8 @@
     "three": "^0.181.1",
     "tsconfig-paths": "^4.2.0",
     "uuid": "^11.1.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "yaml": "^2.8.1"
   },
   "name": "server",
   "version": "1.0.0",
