fix: improved bucket design for plugins, rasters, and models

--- a/server/plugins/base-tools/manifest.yml
+++ b/server/plugins/base-tools/manifest.yml
@@ -20,7 +20,7 @@ artifacts:
       resultFile: atoms.msgpack
       exportConfig:
         name: AtomisticExporter
-        handler: exportAtomsTypeToGLB
+        handler: exportAtomsTypeToGLBMinIO
         type: glb
 
     - name: Defect Mesh
