feat: update ModifierConfiguration to use state for hasInitializedPreset and adjust effect dependencies; modify manifest to include polyhedral-template-matching modifier

--- a/server/plugins/primitives/manifest.yml
+++ b/server/plugins/primitives/manifest.yml
@@ -241,6 +241,7 @@ entrypoint:
             step: 0.01
             visibleWhen:
                 identificationMode: PTM
+                modifier: polyhedral-template-matching
 
         defectSmoothingLevel:
             type: number
